MSL-138: Replace add to remove from library
